2007-07-02  Wang Xin  <jedy.wang@sun.com>

	Fixes #450820.

	* em-format-quote.c: Add an empty new line at the beginning
	of the mail body when relpying a mail.

2007-06-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #352947

	* em-account-editor.c: (smime_sign_key_select),
	(smime_encrypt_key_select): EMAccountEditor isn't a GtkWidget.

2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>
	
        ** Fix for bug #448223 from Gilles Dartiguelongue

	* em-folder-browser.c: (generate_viewoption_menu):

2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #445812 from Gilles Dartiguelongue

	* em-folder-view.c: (emfv_on_url_cb):
	* em-popup.c: (em_popup_target_new_uri):
	* em-popup.h:

2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #437935 from  Gilles Dartiguelongue  

	* em-folder-tree-model.c: (em_folder_tree_model_is_type_inbox):

2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #443659 from Vinod

	* em-account-prefs.c: (account_able_clicked),
	(account_able_toggled), (account_cursor_change):

2007-06-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #330175
	
	* em-folder-view.c: (emfv_message_reply):
	Added helper function html_contains_nonwhitespace which returns TRUE
	if selected html text contains at least one non-space character.

2007-06-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Add support for the Magic Space Bar.

	* em-folder-browser.c: (html_scroll), (emfb_init),
	(emfb_list_key_press):
	* em-folder-tree.c: (emft_tree_user_event),
	(em_folder_tree_select_next_path):
	* em-folder-tree.h:

2007-06-15  Matthew Barnes  <mbarnes@redhat.com>

	* mail-send-recv.c:
	Use ellipsized GtkLabels instead of EClippedLabels (#447727).

2007-06-13  Sankar P  <psankar@novell.com>

	* em-folder-view.c:
	Fixes build break by including missing headers.
	See #442631

2007-06-12  Bastien Nocera  <hadess@hadess.net>

	* em-folder-view.c: (emfv_list_key_press):